[gd_scene load_steps=3 format=3 uid="uid://qx5fovogo7h3"]

[ext_resource type="Script" path="res://scripts/overworld/overworld_enemy/enemy_spawner.gd" id="1_an13r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfh4r"]
size = Vector2(48, 48)

[node name="EnemySpawner" type="Node2D" groups=["EnemySpawner", "Persist"]]
script = ExtResource("1_an13r")

[node name="SpawnArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="SpawnShape" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource("RectangleShape2D_lfh4r")
debug_color = Color(0, 0.6, 0.701961, 0)

[connection signal="area_entered" from="SpawnArea" to="." method="_on_area_2d_area_entered"]
